Time: 45 ms (27.33%), Space: 51.7 MB (43.78%) - LeetHub